Minimal required changes. Changed the server socket from UNIX to INET.